--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -21,11 +21,12 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_secure_storage: ^8.0.0
   json_annotation: ^4.8.1
-  firebase_core: ^2.0.0
-  firebase_auth: ^4.0.0
-  cloud_firestore: ^4.0.0
-  firebase_storage: ^11.0.0
-  firebase_messaging: ^14.0.0
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.17.5
+  firebase_storage: ^11.7.7
+  firebase_messaging: ^14.9.4
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
