--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -10,14 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
+  provider: ^6.1.1
   http: ^1.1.0
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.2.2
   intl: ^0.18.1
   flutter_local_notifications: ^15.1.0
   image_picker: ^1.0.2
-  cached_network_image: ^3.2.3
-  flutter_svg: ^2.0.7
+  cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.9
   google_fonts: ^5.1.0
   flutter_secure_storage: ^8.0.0
   json_annotation: ^4.8.1
@@ -26,7 +26,13 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_storage: ^11.7.7
   firebase_messaging: ^14.9.4
-  google_sign_in: ^6.2.1
+  google_sign_in: ^6.2.2
+  curved_navigation_bar: ^1.0.6
+  hugeicons: ^0.0.7
+  path: ^1.8.3
+  uuid: ^4.2.1
+  # sqflite: ^2.3.0
+  sqflite: any
 
 dev_dependencies:
   flutter_test:
