--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
   uuid: ^4.2.1
   # sqflite: ^2.3.0
   sqflite: any
+  flutter_zoom_drawer: ^3.1.1
+  iconly: ^1.0.1
+  # File management
+  file_picker: ^8.0.7
+  path_provider: ^2.1.4
+  # Analytics
+  device_info_plus: ^10.1.2
+  package_info_plus: ^8.0.2
 
 dev_dependencies:
   flutter_test:
