--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   http: ^1.1.0
   shared_preferences: ^2.2.2
-  intl: ^0.18.1
+  intl: ^0.19.0
   flutter_local_notifications: ^15.1.0
   image_picker: ^1.0.2
   cached_network_image: ^3.3.1
