--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # File management
   file_picker: ^8.0.7
   path_provider: ^2.1.4
+  url_launcher: ^6.2.5
   # Analytics
   device_info_plus: ^10.1.2
   package_info_plus: ^8.0.2
